kubernetes/apps/immichframe/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: immichframe
  namespace: immichframe
  labels:
    app.kubernetes.io/name: immichframe
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: immichframe
  ports:
    - name: http
      port: 80
      targetPort: http
