kubernetes/apps/immichframe/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immichframe
  namespace: immichframe
  labels:
    app.kubernetes.io/name: immichframe
spec:
  parentRefs:
    - name: internal
      namespace: gateway-system
      sectionName: https
  hostnames:
    - immichframe.apps.mbhome.biz
  rules:
    - backendRefs:
        - name: immichframe
          port: 80
