kubernetes/apps/immichframe/ciliumnetworkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: immichframe
  namespace: immichframe
  labels:
    app.kubernetes.io/name: immichframe
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: immichframe
  ingress:
    - fromEntities:
        - ingress
        - host #for health checks
        - remote-node #for health checks
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: immich.mbhome.biz
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toFQDNs:
        - matchName: api.openweathermap.org
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
